Agrego entidad Producto

--- a/Core/Core.vbproj
+++ b/Core/Core.vbproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ClienteModel.vb" />
+    <Compile Include="Models\ProductoModel.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -82,6 +83,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ValueObjects\ECategory.vb" />
     <Compile Include="ValueObjects\EntityState.vb" />
   </ItemGroup>
   <ItemGroup>
